# Jellyfish

./: README.md  UserConfig.txt
jellyfish_gazebo/dji_m210_controllers_gazebo/: CMakeLists.txt  package.xml
jellyfish_gazebo/dji_m210_controllers_gazebo/src/: bank.cpp  dji_m210_ros_hitl_controller_gazebo.cpp
jellyfish_gazebo/dji_m210_description/: CMakeLists.txt  package.xml
jellyfish_gazebo/dji_m210_description/launch/: rviz.launch
jellyfish_gazebo/dji_m210_description/meshes/: aruco_tag_14.dae
jellyfish_gazebo/dji_m210_description/urdf/: HITL_dji_m210.xacro  SITL_dji_m210.xacro  multirotor_base.xacro
jellyfish_gazebo/dji_m210_description/urdf/arucotags/: tag14.urdf
jellyfish_gazebo/dji_m210_description/urdf/gimbal/: gimbal.xacro  gimbal_joints.xacro
jellyfish_gazebo/jellyfish_sim/: CMakeLists.txt  package.xml
jellyfish_gazebo/jellyfish_sim/URDF/: basic_tag.urdf  basic_tag.xacro
jellyfish_gazebo/jellyfish_sim/config/: gimbal_pids.yaml  gimbal_pitch.yaml  gimbal_roll.yaml  marvelmind_service_vertices.yaml
jellyfish_gazebo/jellyfish_sim/launch/: fake_dji_sdk.launch  fake_marvelmind.launch  simulate.launch  spawn_dji_m210.launch  spawn_landing_platform.launch  upload.launch
jellyfish_gazebo/jellyfish_sim/resources/: dji_m210_vehicle_parameters.yaml  roll_pitch_yawrate_thrust_controller_parameters.yaml
jellyfish_gazebo/jellyfish_sim/src/scripts/: fake_dji_sdk.py  fake_marvelmind.py  gazebo_drone_movement.py
jellyfish_gazebo/jellyfish_sim/worlds/: HITL.world  SITL.world
jellyfish_gazebo/jellyfish_urdf/: CMakeLists.txt  package.xml
jellyfish_gazebo/jellyfish_urdf/URDF/: basic_tag.xacro
jellyfish_gazebo/jellyfish_urdf/config/: gimbal_yaw.yaml  hedgehog_positions.yaml
jellyfish_gazebo/jellyfish_urdf/launch/: fake_dji_sdk.launch  fake_marvelmind.launch  simulate.launch  spawn_dji_m210.launch  spawn_landing_platform.launch  upload.launch
jellyfish_gazebo/jellyfish_urdf/meshes/tag14/: tag14.dae
jellyfish_gazebo/jellyfish_urdf/resources/: attitude_controller_parameters.yaml
jellyfish_gazebo/jellyfish_urdf/src/scripts/: fake_dji_sdk.py  fake_marvelmind.py  gazebo_drone_movement.py
jellyfish_movement/: CMakeLists.txt  package.xml
jellyfish_movement/action/: ControlGimbal.action  MoveToCartesianCoordinates.action  MoveToGPSCoordinates.action
jellyfish_movement/config/: hedgehog_info.yaml
jellyfish_movement/launch/: jellyfish.launch
jellyfish_movement/src/scripts/: Bank.py  DTLS.py  drone_gimbal_control.py  drone_movement_control.py  drone_pose_publisher.py  gimbal.py  movement.py  sandbox.py
jellyfish_movement/srv/: set_flight_state.srv  set_goalpoint.srv
jellyfish_vision/aruco_ros_wrapper/: CMakeLists.txt  package.xml
jellyfish_vision/aruco_ros_wrapper/cfg/: ArucoThreshold.cfg
jellyfish_vision/aruco_ros_wrapper/include/aruco_ros_wrapper/: aruco_ros_utils.h
jellyfish_vision/aruco_ros_wrapper/launch/: map.launch  single.launch
jellyfish_vision/aruco_ros_wrapper/scripts/: map_single.cpp  simple_single.cpp
jellyfish_vision/aruco_ros_wrapper/src/: aruco_ros_utils.cpp
jellyfish_vision/aruco_ros_wrapper/srv/: PixelToPosition.srv
jellyfish_vision/cv_sandbox/: CMakeLists.txt  package.xml
jellyfish_vision/cv_sandbox/config/: m210_info.yaml
jellyfish_vision/cv_sandbox/launch/: aruco_test.launch  m210_aruco.launch  publish_raw_image.launch
jellyfish_vision/jellyfish_vision/: CMakeLists.txt  package.xml
jellyfish_vision/jellyfish_vision/config/: dji_m210_info.yaml
jellyfish_vision/jellyfish_vision/launch/: m210_aruco.launch
jellyfish_vision/jellyfish_vision/src/: basis_changer.py
