<?xml version="1.0"?>
<package format="2">
  <name>dji_m210_description</name>
  <version>0.0.0</version>
  <description>The dji_m210_description package</description>

  <maintainer email="sharkbonebroth@todo.todo">sharkbonebroth</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>rotors_gazebo_plugins</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>dji_m210_controllers_gazebo</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <gazebo_ros
          gazebo_model_path="${prefix}/models" />
  </export>
</package>

